--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/config": "4.0.2",
     "@nestjs/core": "11.0.16",
     "@nestjs/platform-express": "11.0.1",
+    "@nestjs/platform-socket.io": "11.0.17",
     "@nestjs/serve-static": "5.0.3",
     "@nestjs/websockets": "11.0.13",
     "cache-manager": "6.4.2",
