--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nestjs/websockets": "11.0.13",
     "cache-manager": "6.4.2",
     "cache-manager-redis-yet": "5.1.5",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
     "cookie-parser": "1.4.7",
     "ejs": "3.1.10",
     "nanoid": "3.3.4",
